[package]
name = "radicle-ci-broker"
version = "0.1.0"
edition = "2021"
authors = ["Nikolas Vourlakis <nvourlakis@protonmail.com>"]

[dependencies]
anyhow = { version = "1" }
crossbeam-channel = "0.5.8"
hyper = { version = "0.14", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.28.2", features = ["full"] }

[dependencies.radicle]
version = "0"
path = "../radicle"

[dependencies.radicle-cob]
version = "0"
path = "../radicle-cob"

[dependencies.radicle-term]
version = "0"
path = "../radicle-term"

